--- a/compose/production/traefik/traefik.yml
+++ b/compose/production/traefik/traefik.yml
@@ -31,7 +31,7 @@ certificatesResolvers:
 http:
   routers:
     web-secure-router:
-      rule: "Host(`app.hanz.com.vn`) || Host(`www.app.hanz.com.vn`)"
+      rule: "Host(`api.hanz.com.vn`) || Host(`www.api.hanz.com.vn`)"
       entryPoints:
         - web-secure
       middlewares:
@@ -42,7 +42,7 @@ http:
         certResolver: letsencrypt
 
     flower-secure-router:
-      rule: "Host(`app.hanz.com.vn`)"
+      rule: "Host(`api.hanz.com.vn`)"
       entryPoints:
         - flower
       service: flower
