- Add address, currency and timezone field into Hotel model - ChannexPMSAdapter.sync_up now get address, currency and timezone directly from Channex - Add update_or_create_webhook to ChannexClient - Change default timezone to UTC - Update admin site

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,6 @@ ignore_errors = True
 
 [coverage:run]
 include = backend/**
-omit = */migrations/*, */tests/*, */api_router.py, */*_client.py
+omit = */migrations/*, */tests/*, */api_router.py, */*_client.py, */admin.py
 plugins =
     django_coverage_plugin
