--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,6 @@ ignore_errors = True
 
 [coverage:run]
 include = backend/**
-omit = */migrations/*, */tests/*, */api_router.py, */*_client.py, */admin.py
+omit = */migrations/*, */tests/*, */api_router.py, */admin.py, backend/cm/client/*
 plugins =
     django_coverage_plugin
